# RL_Env_Design

./: .dockerignore  .gitattributes  .gitignore  Containerfile  MNIST_TUTORIAL.md  README.md  env_requirements.txt  pyproject.toml  setup_data.py
scripts/: plot_grpo_results.py
src/pm_env/: check_permissions.py  entrypoints.py  evaluation_runner.py  fake_model.py  get_data_dir.py  grpo_trainer.py  llm_grpo_rollouts.py  load_task.py  run_helpers.py  save_artifact.py  scoring_script.py  system_prompts.py  task.py  tasks.py
src/pm_env/judges/: executable_judge.py  judge.py  regex_judge.py  rubric_judge.py
src/pm_env/mcp_servers/: discover_tools.py  http_mcp_server.py  mcp_server.py
src/pm_env/schemas/: __init__.py  chat.py  evaluation_run_config.py  http_mcp_server_config.py  required_hardware.py  run_state.py  scoring.py  transcript.py  websocket_config.py
src/pm_env/tools/: bash.py  bash_base.py  submit_answers.py  view_image_file.py
src/pm_env/transcript_streaming/: stream_transcript_to_stdout.py  stream_transcript_to_websocket.py
